# forkbook

./: LICENSE  README.md  podman-compose.yaml  pyproject.toml
backend/: app.py  pyproject.toml  sender.py
backend/app/: main.py
backend/app/api/endpoints/: rating.py  recipe.py  security.py
backend/app/core/: config.py
backend/app/schemas/: rating.py  recipe.py  user.py
backend/app/services/: recipes.py
backend/app/utils/: auth.py  parser.py
backend/endpoints/: recipe.py
backend/utils/: constants.py  dependencies.py  parser.py  schemas.py
backend/utils/services/: recipes.py
frontend/: .prettierrc  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: app.css  hooks.server.js
frontend/src/lib/components/: ModeToggle.svelte  RecipeSearch.svelte  app-sidebar.svelte
frontend/src/lib/components/ui/pagination/: pagination-content.svelte  pagination-ellipsis.svelte  pagination-next-button.svelte  pagination-next.svelte  pagination-prev-button.svelte  pagination-previous.svelte
frontend/src/lib/server/: api.js
frontend/src/routes/: +layout.svelte
frontend/src/routes/(app)/recipes/: +layout.svelte  +page.js  +page.server.js  +page.svelte
frontend/src/routes/(app)/recipes/[id]/: +layout.svelte  +page.js  +page.server.js  +page.svelte
frontend/src/routes/(auth)/login/: +page.server.js  +page.svelte
frontend/src/routes/(auth)/show-token/: +page.server.js  +page.svelte
frontend/src/routes/(auth)/signup/: +page.server.js  +page.svelte
postgres/: init.sql
(+4 files in other folders)
