[project]
name = "forkbook"
version = "0.1.0"
description = "Self-hosted recipe and cooking notebook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "psycopg[binary,pool]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "niquests>=3.18.2",
    "pillow>=12.2.0",
]
